--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "node-fetch": "^2.6.1",
     "redis": "^3.1.2",
     "redis-clustr": "^1.7.0",
     "utf-8-validate": "^5.0.5",
